Fixing spacing for top nav

--- a/app/assets/stylesheets/postlogin-navigation.less
+++ b/app/assets/stylesheets/postlogin-navigation.less
@@ -147,9 +147,10 @@ header {
       background-repeat: no-repeat;
       background-position: center left;
       padding-top: 0px;
-      padding-left: 30px;
+      padding-left: 35px;
       line-height: 53px;
       text-align: left;
+
       &.activities {
         padding-left: 42px;
         margin-right: 20px;
